# fraud-review-detector-ai

./: .dockerignore  .gitignore  README.md  docker-compose.yml  generate_final_notebook.py  package.json  pnpm-lock.yaml
apps/api/: .env.example  .eslintrc.js  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/api/src/config/: env.ts
apps/api/src/helpers/: asyncHandler.ts  sendResponse.ts
apps/api/src/middlewares/: auth.middleware.ts  response.middleware.ts
apps/api/src/modules/auth/: auth.controller.ts  auth.routes.ts  auth.service.ts
apps/api/src/modules/comment/: comment.controller.ts  comment.routes.ts  comment.service.ts
apps/api/src/modules/health/: health.controller.ts  health.service.ts
apps/api/src/routes/: appRouter.ts
apps/api/src/routes/v1/: router.ts
apps/api/src/types/: express.d.ts
apps/model/: Dockerfile  README.md  pyproject.toml
apps/model/dev/: Typhoon_Test1.ipynb
apps/model/prod/: main.py
apps/model/prod/model/: model_example.md
apps/model/utils/: data_synthesis.ipynb  data_synthesis_fake.ipynb  format_amazon_data.py  generate_synthetic_reviews.py  split_amazon_dataset.py  split_dataset.py
apps/web/: .env.example  index.html  package.json  tsconfig.app.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/hooks/: useAuth.ts  useHeader.ts
apps/web/src/pages/: AuthenticationPage.tsx  HomePage.tsx
apps/web/src/services/: auth-service.ts  comment-service.ts  post-service.ts  user-service.ts
apps/web/src/stores/: auth-store.ts  header-store.ts
apps/web/src/utils/: common.ts  date.util.ts
(+33 files in other folders)
